# aws_config_mod

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  lexer.rs  lib.rs  model.rs  util.rs
src/model/: config_file.rs  config_path.rs  credentials_file.rs  entry.rs  equal.rs  file_content.rs  header.rs  heading_name.rs  indent.rs  nested_setting.rs  nested_settings.rs  newline.rs  profile_name.rs  section.rs  section_name.rs  section_path.rs  section_type.rs  setting.rs  setting_name.rs  setting_path.rs  subsection_setting.rs  value.rs  value_type.rs  whitespace.rs
tests/: integration_tests.rs
