[package]
name = "aws_config_mod"
version = "0.2.1"
authors = ["Brian Heise"]
edition = "2021"
description = "Read and modify AWS configuration files while preserving existing whitespace and comments"
documentation = "https://docs.rs/aws_config_mod/latest/aws_config_mod/"
readme = "README.md"
repository = "https://github.com/toadslop/aws_config_mod"
license = "MIT OR Apache-2.0"
keywords = ["aws", "config", "sdk"]

[dependencies]
nom = { version = "7", default-features = false, features = ["std"] }
thiserror = "1"
